# admc

./: .clang-format  .gitignore  CHANGELOG.txt  CHANGELOG_ru.txt  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.debian  Makefile  README.md  admc.qrc  admc.spec  admc_ru.ts  adtool.pro  adtool.spec  config.h.in  prebuildinstall.sh  run.sh
adldap/: CMakeLists.txt  active_directory.c  ad_connection.cpp
adldap/cmake/Modules/: AddCMockaTest.cmake  AddMockedTest.cmake
adldap/include/: active_directory.h  ad_connection.h
adldap/test/: test_adldap  test_adldap.c
doc/: CMakeLists.txt  admc.1  admc.desktop  admc.qhp  admc.wiki  generate_manual.cpp  index.html
gpgui/: CMakeLists.txt  config.h.in  gpgui  gpgui.qrc  main.cpp
gpgui/gui/: MainWindow.cpp  MainWindow.h  browse_widget.cpp  browse_widget.h  pol_editor.cpp  xml_editor.cpp  xml_editor.h
gpgui/gui/include/: MainWindow.h  REG_LINK_Dialog.h  REG_MULTI_SZ_Dialog.h  REG_NONE_Dialog.h  REG_QWORD_Dialog.h  REG_QWORD_LE_Dialog.h  REG_RESOURCE_LIST_Dialog.h  REG_RESOURCE_REQ_LIST_Dialog.h  REG_SZ_Dialog.h
gpgui/include/: Runner.h
gpgui/libgptbackend/: CMakeLists.txt  LICENSE  config.h.in  main.cpp
gpgui/libgptbackend/include/: registry.h
gpgui/libgptbackend/preg/: iconv_wrapper.cpp
gpgui/libgptbackend/reg/: reg.cpp
gpgui/libgptbackend/sambaxml/: preg_xml.cpp
src/adldap/: CMakeLists.txt  active_directory.c  active_directory.h  ad_config.cpp  ad_config.h  ad_config_p.h  ad_defines.h  ad_display.cpp  ad_display.h  ad_filter.cpp  ad_filter.h  ad_interface.cpp  ad_interface.h  ad_interface_p.h  ad_object.cpp  ad_object.h  ad_security.cpp  ad_security.h  ad_utils.cpp  ad_utils.h  adldap.h  adldap.qrc  adldap_config.h.in  adldap_en.ts  adldap_ru.ts  common_task_manager.cpp  common_task_manager.h  gplink.cpp  gplink.h  krb5client.cpp  krb5client.h
src/adldap/include/: active_directory.h
src/adldap/kinit/: kinit.c
src/adldap/samba/: dom_sid.c  dom_sid.h  gp_manage.c  gp_manage.cpp  gp_manage.h  libcli_security.h  libsmb_xattr.c  libsmb_xattr.h  misc.h  ndr_misc.c  ndr_security.c  ndr_security.h  replace.c  replace.h  sddl.c  sddl.h  secace.c  secace.h  security_descriptor.c  security_descriptor.h  smb_context.cpp  smb_context.h
src/adldap/test/: CMakeLists.txt  test_adldap  test_adldap.c
src/admc/: CMakeLists.txt  about_dialog.cpp  about_dialog.h  about_dialog.ui  account_tab.cpp  account_tab.h  ad_config.cpp  ad_config.h  ad_defines.h  ad_enums.h  ad_interface.cpp  ad_interface.h  ad_interface_defines.h  ad_object.cpp  ad_object.h  ad_utils.cpp  ad_utils.h  address_tab.cpp  address_tab.h  admc  admc-icons.qrc  admc.qrc  admc_en.ts  admc_ru.ts  advanced_view_proxy.cpp  advanced_view_proxy.h  attribute_display.cpp  attribute_display.h  attribute_display_strings.cpp  attribute_display_strings.h  attributes_tab.cpp  attributes_tab.h  central_widget.cpp  central_widget.h  change_dc_dialog.cpp  change_dc_dialog.h  change_dc_dialog.ui  changelog_dialog.cpp  changelog_dialog.h  changelog_dialog.ui  (+277 more)
src/admc/AdmcDefault/: index.theme
src/admc/ad/: ad_config.cpp  ad_config.h  ad_config_p.h  ad_defines.h  ad_display.cpp  ad_display.h  ad_filter.cpp  ad_filter.h  ad_interface.cpp  ad_interface.h  ad_interface_p.h  ad_object.cpp  ad_object.h  ad_object_p.h  ad_utils.cpp  ad_utils.h  adldap.h
src/admc/admc-icons/: index.theme  theme
src/admc/attribute_dialogs/: attribute_dialog.cpp  attribute_dialog.h  bool_attribute_dialog.cpp  bool_attribute_dialog.h  bool_attribute_dialog.ui  datetime_attribute_dialog.cpp  datetime_attribute_dialog.h  datetime_attribute_dialog.ui  hex_number_attribute_dialog.cpp  hex_number_attribute_dialog.h  hex_number_attribute_dialog.ui  list_attribute_dialog.cpp  list_attribute_dialog.h  list_attribute_dialog.ui  number_attribute_dialog.cpp  number_attribute_dialog.h  number_attribute_dialog.ui  octet_attribute_dialog.cpp  octet_attribute_dialog.h  octet_attribute_dialog.ui  string_attribute_dialog.cpp  string_attribute_dialog.h  string_attribute_dialog.ui  time_span_attribute_dialog.cpp  time_span_attribute_dialog.h  time_span_attribute_dialog.ui
src/admc/attribute_edits/: account_option_edit.cpp  account_option_edit.h  account_option_multi_edit.cpp  account_option_multi_edit.h  attribute_edit.cpp  attribute_edit.h  computer_sam_name_edit.cpp  computer_sam_name_edit.h  country_combo.cpp  country_combo.h  country_edit.cpp  country_edit.h  datetime_edit.cpp  datetime_edit.h  delegation_edit.cpp  delegation_edit.h  dn_edit.cpp  (+57 more)
src/gpgui/: CMakeLists.txt  Runner.cpp  gpgui  gpgui.pro  gpgui.qrc  main.cpp
src/kinit/: CMakeLists.txt  kinitdialog.cpp  kinitdialog.h  kinitdialog.ui  krb5_tw_gettext.h  krb5ticketwatcher.cpp  krb5ticketwatcher.h  mainwidget.ui  pw_change_dialog.cpp  pw_change_dialog.h  pw_change_dialog.ui  pw_dialog.cpp  pw_dialog.h  pw_dialog.ui  v5.cpp  v5.h
tests/: CMakeLists.txt  admc_test.cpp  admc_test.h  admc_test_account_option_edit.cpp  admc_test_account_option_edit.h  admc_test_ad_interface.cpp  admc_test_ad_interface.h  admc_test_ad_security.cpp  admc_test_ad_security.h  admc_test_attributes_tab.cpp  admc_test_attributes_tab.h  admc_test_bool_attribute_dialog.cpp  admc_test_bool_attribute_dialog.h  admc_test_bool_editor.cpp  admc_test_bool_editor.h  admc_test_country_edit.cpp  admc_test_country_edit.h  admc_test_create_object_dialog.cpp  admc_test_create_object_dialog.h  admc_test_datetime_attribute_dialog.cpp  admc_test_datetime_attribute_dialog.h  admc_test_datetime_edit.cpp  admc_test_datetime_edit.h  admc_test_datetime_editor.cpp  admc_test_datetime_editor.h  admc_test_delegation_edit.cpp  admc_test_delegation_edit.h  admc_test_dn_edit.cpp  admc_test_dn_edit.h  admc_test_edit_query_item_widget.cpp  admc_test_edit_query_item_widget.h  admc_test_expiry_edit.cpp  admc_test_expiry_edit.h  admc_test_filter_widget.cpp  admc_test_filter_widget.h  admc_test_find_object_dialog.cpp  admc_test_find_object_dialog.h  admc_test_find_policy_dialog.cpp  admc_test_find_policy_dialog.h  admc_test_gplink.cpp  (+71 more)
translations/: CMakeLists.txt  en.ts  ru.ts  translations.qrc
(+788 files in other folders)
