
set(ADMC_HELP_PROJECT ${CMAKE_CURRENT_SOURCE_DIR}/admc.qhp)
set(ADMC_COMPRESSED_HELP ${CMAKE_CURRENT_BINARY_DIR}/admc.qch)

find_package(Qt5 REQUIRED
    COMPONENTS
        Help
)

add_custom_command(
    OUTPUT ${ADMC_COMPRESSED_HELP}
    COMMAND Qt5::qhelpgenerator ${ADMC_HELP_PROJECT} -o ${ADMC_COMPRESSED_HELP}
    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/*
)

add_custom_target(doc
    ALL
    DEPENDS ${ADMC_COMPRESSED_HELP}
)

install(
    FILES ${ADMC_COMPRESSED_HELP}
    DESTINATION ${CMAKE_INSTALL_DOCDIR}
    PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ
)

INSTALL(FILES ${PROJECT_SOURCE_DIR}/doc/admc.1
        DESTINATION ${CMAKE_INSTALL_MANDIR}/man1/
        PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)
