
install(FILES ${PROJECT_SOURCE_DIR}/doc/admc.1
        DESTINATION ${CMAKE_INSTALL_MANDIR}/man1/
        PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ)

install(
    FILES admc.desktop
    DESTINATION ${CMAKE_INSTALL_DATADIR}/applications
    PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ
)
